# WebSVF

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .prettierrc.json  404.html  Bug-Analysis-Report.json  CHANGELOG.md  CNAME  Dockerfile  README.md  README.md.bak  WebSVF.code-workspace  asset-manifest.json  bugreport.js  constants.js  eslint.config.js  extension.js  file-report.js  index.html  init.js  landingPage.js  menu.js  package-lock.json  package.json  postcss.config.js  precache-manifest.0a142ba75a4f04f3ba23562000583344.js  precache-manifest.0dbaf4edb5f22d884d00e02ac02f3af2.js  precache-manifest.25ecd7993b585eab9e99f8cf2d82c6e8.js  precache-manifest.2b94e0181bac641689efc964b430fbfd.js  precache-manifest.3736212ac798ab61f9c4a8282270bb28.js  precache-manifest.444ec799ade47b3a99c2041b9dfea59c.js  precache-manifest.45a2ab2aaf952cac3e875d442a1c46ff.js  precache-manifest.6ca149c345cf862e205b54c24e9a2ab9.js  precache-manifest.7cde0e04b9bb01d3c60a8a068f43147b.js  precache-manifest.7fa1f745a525a8bcc31048388fa445e9.js  precache-manifest.81284787d35f1bdd318ba571fffee7d9.js  (+22 more)
6.0/: .gitattributes  .gitignore  README.md
api/: .dockerignore  Dockerfile  app.py  callgraph_final.dot  fly.toml  icfg_initial.dot  pyproject.toml  requirements.txt  svfg_final.dot  svfir_initial.dot
api/examples/: buffer.c  bufferLeaks.c  example.c  example.ll  leak.c
assets/: cssMode-22P4bW09.js  cssMode-8KciX-Vp.js  cssMode-B6utFfUv.js  cssMode-BAPC7Y8U.js  cssMode-BM0HD13F.js  cssMode-BMAa2bzF.js  cssMode-BXgHGMNN.js  cssMode-BYKTYNw8.js  (+240 more)
(+849 files in other folders)
